subjects/FormalLanguages/formal_languages/parser/parser_grammar/LParser.py
# Generated from LParser.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LParser ( Parser ):

    grammarFileName = "LParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'then'", "'else'", "'while'", 
                     "'skip'", "'do'", "'read'", "'write'", "'begin'", "'end'", 
                     "'true'", "'false'", "<INVALID>", "<INVALID>", "'('", 
                     "')'", "';'", "':='", "'+'", "'-'", "'**'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'>'", "'>='", "'<'", 
                     "'<='", "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ELSE", "WHILE", "SKIP_KW", 
                      "DO", "READ", "WRITE", "BEGIN", "END", "TRUE", "FALSE", 
                      "IDENTIFIER", "FLOATING", "OPEN_PAREN", "CLOSE_PAREN", 
                      "SEMICOLON", "ASSIGN", "ADD", "SUB", "POW", "MUL", 
                      "DIV", "MOD", "EQ", "NEQ", "GE", "GEQ", "LE", "LEQ", 
                      "AND", "OR", "COMMENT", "CLOSE", "SKIP_" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simple_statement = 2
    RULE_compound_statement = 3
    RULE_skip = 4
    RULE_assignment = 5
    RULE_write = 6
    RULE_read = 7
    RULE_while_stmt = 8
    RULE_if_stmt = 9
    RULE_if_stmt_while_stmt_condition = 10
    RULE_if_stmt_while_stmt_body = 11
    RULE_expression = 12
    RULE_value = 13
    RULE_identifier = 14

    ruleNames =  [ "program", "statement", "simple_statement", "compound_statement", 
                   "skip", "assignment", "write", "read", "while_stmt", 
                   "if_stmt", "if_stmt_while_stmt_condition", "if_stmt_while_stmt_body", 
                   "expression", "value", "identifier" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ELSE=3
    WHILE=4
    SKIP_KW=5
    DO=6
    READ=7
    WRITE=8
    BEGIN=9
    END=10
    TRUE=11
    FALSE=12
    IDENTIFIER=13
    FLOATING=14
    OPEN_PAREN=15
    CLOSE_PAREN=16
    SEMICOLON=17
    ASSIGN=18
    ADD=19
    SUB=20
    POW=21
    MUL=22
    DIV=23
    MOD=24
    EQ=25
    NEQ=26
    GE=27
    GEQ=28
    LE=29
    LEQ=30
    AND=31
    OR=32
    COMMENT=33
    CLOSE=34
    SKIP_=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(LParser.StatementContext,0)


        def EOF(self):
            return self.getToken(LParser.EOF, 0)

        def getRuleIndex(self):
            return LParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = LParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.statement(0)
            self.state = 31
            self.match(LParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self):
            return self.getTypedRuleContext(LParser.Simple_statementContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.StatementContext)
            else:
                return self.getTypedRuleContext(LParser.StatementContext,i)


        def SEMICOLON(self):
            return self.getToken(LParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)



    def statement(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LParser.StatementContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_statement, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.simple_statement()
            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LParser.StatementContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_statement)
                    self.state = 36
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 37
                    self.match(LParser.SEMICOLON)
                    self.state = 38
                    self.statement(3) 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Simple_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def skip(self):
            return self.getTypedRuleContext(LParser.SkipContext,0)


        def assignment(self):
            return self.getTypedRuleContext(LParser.AssignmentContext,0)


        def write(self):
            return self.getTypedRuleContext(LParser.WriteContext,0)


        def read(self):
            return self.getTypedRuleContext(LParser.ReadContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(LParser.While_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(LParser.If_stmtContext,0)


        def getRuleIndex(self):
            return LParser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)




    def simple_statement(self):

        localctx = LParser.Simple_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_statement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LParser.SKIP_KW]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.skip()
                pass
            elif token in [LParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.assignment()
                pass
            elif token in [LParser.WRITE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.write()
                pass
            elif token in [LParser.READ]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.read()
                pass
            elif token in [LParser.WHILE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.while_stmt()
                pass
            elif token in [LParser.IF]:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.if_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(LParser.BEGIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.StatementContext)
            else:
                return self.getTypedRuleContext(LParser.StatementContext,i)


        def SEMICOLON(self):
            return self.getToken(LParser.SEMICOLON, 0)

        def END(self):
            return self.getToken(LParser.END, 0)

        def simple_statement(self):
            return self.getTypedRuleContext(LParser.Simple_statementContext,0)


        def getRuleIndex(self):
            return LParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)




    def compound_statement(self):

        localctx = LParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_statement)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.match(LParser.BEGIN)
                self.state = 53
                self.statement(0)
                self.state = 54
                self.match(LParser.SEMICOLON)
                self.state = 55
                self.statement(0)
                self.state = 56
                self.match(LParser.END)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(LParser.BEGIN)
                self.state = 59
                self.simple_statement()
                self.state = 60
                self.match(LParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SkipContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SKIP_KW(self):
            return self.getToken(LParser.SKIP_KW, 0)

        def getRuleIndex(self):
            return LParser.RULE_skip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip" ):
                listener.enterSkip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip" ):
                listener.exitSkip(self)




    def skip(self):

        localctx = LParser.SkipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_skip)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(LParser.SKIP_KW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(LParser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(LParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(LParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = LParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.identifier()
            self.state = 67
            self.match(LParser.ASSIGN)
            self.state = 68
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WriteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(LParser.WRITE, 0)

        def OPEN_PAREN(self):
            return self.getToken(LParser.OPEN_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(LParser.CLOSE_PAREN, 0)

        def getRuleIndex(self):
            return LParser.RULE_write

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)




    def write(self):

        localctx = LParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LParser.WRITE)
            self.state = 71
            self.match(LParser.OPEN_PAREN)
            self.state = 72
            self.expression(0)
            self.state = 73
            self.match(LParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(LParser.READ, 0)

        def OPEN_PAREN(self):
            return self.getToken(LParser.OPEN_PAREN, 0)

        def identifier(self):
            return self.getTypedRuleContext(LParser.IdentifierContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(LParser.CLOSE_PAREN, 0)

        def getRuleIndex(self):
            return LParser.RULE_read

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)




    def read(self):

        localctx = LParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(LParser.READ)
            self.state = 76
            self.match(LParser.OPEN_PAREN)
            self.state = 77
            self.identifier()
            self.state = 78
            self.match(LParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(LParser.WHILE, 0)

        def if_stmt_while_stmt_condition(self):
            return self.getTypedRuleContext(LParser.If_stmt_while_stmt_conditionContext,0)


        def DO(self):
            return self.getToken(LParser.DO, 0)

        def if_stmt_while_stmt_body(self):
            return self.getTypedRuleContext(LParser.If_stmt_while_stmt_bodyContext,0)


        def getRuleIndex(self):
            return LParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)




    def while_stmt(self):

        localctx = LParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(LParser.WHILE)
            self.state = 81
            self.if_stmt_while_stmt_condition()
            self.state = 82
            self.match(LParser.DO)
            self.state = 83
            self.if_stmt_while_stmt_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LParser.IF, 0)

        def if_stmt_while_stmt_condition(self):
            return self.getTypedRuleContext(LParser.If_stmt_while_stmt_conditionContext,0)


        def THEN(self):
            return self.getToken(LParser.THEN, 0)

        def if_stmt_while_stmt_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.If_stmt_while_stmt_bodyContext)
            else:
                return self.getTypedRuleContext(LParser.If_stmt_while_stmt_bodyContext,i)


        def ELSE(self):
            return self.getToken(LParser.ELSE, 0)

        def getRuleIndex(self):
            return LParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = LParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(LParser.IF)
            self.state = 86
            self.if_stmt_while_stmt_condition()
            self.state = 87
            self.match(LParser.THEN)
            self.state = 88
            self.if_stmt_while_stmt_body()
            self.state = 89
            self.match(LParser.ELSE)
            self.state = 90
            self.if_stmt_while_stmt_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_stmt_while_stmt_conditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(LParser.OPEN_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(LParser.CLOSE_PAREN, 0)

        def getRuleIndex(self):
            return LParser.RULE_if_stmt_while_stmt_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt_while_stmt_condition" ):
                listener.enterIf_stmt_while_stmt_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt_while_stmt_condition" ):
                listener.exitIf_stmt_while_stmt_condition(self)




    def if_stmt_while_stmt_condition(self):

        localctx = LParser.If_stmt_while_stmt_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if_stmt_while_stmt_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(LParser.OPEN_PAREN)
            self.state = 93
            self.expression(0)
            self.state = 94
            self.match(LParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_stmt_while_stmt_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self):
            return self.getTypedRuleContext(LParser.Simple_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(LParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return LParser.RULE_if_stmt_while_stmt_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt_while_stmt_body" ):
                listener.enterIf_stmt_while_stmt_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt_while_stmt_body" ):
                listener.exitIf_stmt_while_stmt_body(self)




    def if_stmt_while_stmt_body(self):

        localctx = LParser.If_stmt_while_stmt_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_stmt_while_stmt_body)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LParser.IF, LParser.WHILE, LParser.SKIP_KW, LParser.READ, LParser.WRITE, LParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.simple_statement()
                pass
            elif token in [LParser.BEGIN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.compound_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ValueExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(LParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueExpr" ):
                listener.enterValueExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueExpr" ):
                listener.exitValueExpr(self)


    class AndBinopContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LParser.ExpressionContext,i)

        def AND(self):
            return self.getToken(LParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndBinop" ):
                listener.enterAndBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndBinop" ):
                listener.exitAndBinop(self)


    class MultDivModBinopContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(LParser.MUL, 0)
        def DIV(self):
            return self.getToken(LParser.DIV, 0)
        def MOD(self):
            return self.getToken(LParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDivModBinop" ):
                listener.enterMultDivModBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDivModBinop" ):
                listener.exitMultDivModBinop(self)


    class OrBinopContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(LParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrBinop" ):
                listener.enterOrBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrBinop" ):
                listener.exitOrBinop(self)


    class GreaterLessBinopContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LParser.ExpressionContext,i)

        def GE(self):
            return self.getToken(LParser.GE, 0)
        def GEQ(self):
            return self.getToken(LParser.GEQ, 0)
        def LE(self):
            return self.getToken(LParser.LE, 0)
        def LEQ(self):
            return self.getToken(LParser.LEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreaterLessBinop" ):
                listener.enterGreaterLessBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreaterLessBinop" ):
                listener.exitGreaterLessBinop(self)


    class PlusMinusBinopContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LParser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(LParser.ADD, 0)
        def SUB(self):
            return self.getToken(LParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlusMinusBinop" ):
                listener.enterPlusMinusBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlusMinusBinop" ):
                listener.exitPlusMinusBinop(self)


    class ParenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_PAREN(self):
            return self.getToken(LParser.OPEN_PAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(LParser.ExpressionContext,0)

        def CLOSE_PAREN(self):
            return self.getToken(LParser.CLOSE_PAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)


    class EqualityBinopContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LParser.ExpressionContext,i)

        def EQ(self):
            return self.getToken(LParser.EQ, 0)
        def NEQ(self):
            return self.getToken(LParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityBinop" ):
                listener.enterEqualityBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityBinop" ):
                listener.exitEqualityBinop(self)


    class IdExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(LParser.IdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdExpr" ):
                listener.enterIdExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdExpr" ):
                listener.exitIdExpr(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LParser.OPEN_PAREN]:
                localctx = LParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 101
                self.match(LParser.OPEN_PAREN)
                self.state = 102
                self.expression(0)
                self.state = 103
                self.match(LParser.CLOSE_PAREN)
                pass
            elif token in [LParser.IDENTIFIER]:
                localctx = LParser.IdExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 105
                self.identifier()
                pass
            elif token in [LParser.TRUE, LParser.FALSE, LParser.FLOATING]:
                localctx = LParser.ValueExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 106
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 127
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = LParser.MultDivModBinopContext(self, LParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 109
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 110
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LParser.MUL) | (1 << LParser.DIV) | (1 << LParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 111
                        self.expression(9)
                        pass
